--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,24 +1,10 @@
 [URL]
-LocalMap=/Game/Example_Map
-GameName=Semana27
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/SideScrollerBP/Maps/MainMenu.MainMenu
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
+EditorStartupMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap.SideScrollerExampleMap
 GameDefaultMap=/Game/SideScrollerBP/Maps/MainMenu.MainMenu
-GlobalDefaultGameMode=/Game/SideScrollerBP/Blueprints/SideScrollerGameMode.SideScrollerGameMode_C
-GlobalDefaultServerGameMode=None
-
-[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_10
-
-
-[/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_SideScrollerBP",NewGameName="/Script/Semana27")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_SideScrollerBP",NewGameName="/Script/Semana27")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
